Refactored until the model is registered

--- a/how-to-use-azureml/training/train-within-notebook-for-PowerBI/train-within-notebook.ipynb
+++ b/how-to-use-azureml/training/train-within-notebook-for-PowerBI/train-within-notebook.ipynb
@@ -160,11 +160,11 @@
       "outputs": [],
       "source": [
         "# Get an experiment object from Azure Machine Learning\n",
-        "experiment = Experiment(workspace=ws, name=\"train-within-notebook\")\n",
+        "experiment = Experiment(workspace=ws, name=\"train-within-notebook-for-powerbi\")\n",
         "\n",
         "# Create a run object in the experiment\n",
         "run =  experiment.start_logging()\n",
-        "# Log the algorithm parameter alpha to the run\n",
+        "# Log the algorithm parameter alpha to the run; where alpha is between 0 and 1\n",
         "run.log('alpha', 0.03)\n",
         "\n",
         "# Create, fit, and test the scikit-learn Ridge regression model\n",
@@ -177,7 +177,7 @@
         "run.log('mse', mean_squared_error(data['test']['y'], preds))\n",
         "\n",
         "# Save the model to the outputs directory for capture\n",
-        "model_file_name = 'outputs/model.pkl'\n",
+        "model_file_name = 'outputs/diabetesmodel.pkl'\n",
         "\n",
         "joblib.dump(value = regression_model, filename = model_file_name)\n",
         "\n",
@@ -244,7 +244,7 @@
         "        run.log(name=\"mse\", value=mse)\n",
         "\n",
         "        # Save the model to the outputs directory for capture\n",
-        "        joblib.dump(value=regression_model, filename='outputs/model.pkl')\n"
+        "        joblib.dump(value=regression_model, filename='outputs/diabetesmodel.pkl')\n"
       ]
     },
     {
@@ -341,7 +341,10 @@
         "    print(f)\n",
         "    \n",
         "# Register the model with the workspace\n",
-        "model = best_run.register_model(model_name='best_model', model_path='outputs/model.pkl')"
+        "model = Model.register(model_path = \"diabetesmodel.pkl\",\n",
+        "                       model_name = \"diabetesmodel.pkl\",\n",
+        "                       tags = {'area': \"diabetes\", 'type': \"regression\",\n",
+        "                       description = \"Ridge regression model to predict diabetes\")"
       ]
     },
     {
@@ -366,250 +369,6 @@
         "models = Model.list(ws, name='best_model')\n",
         "for m in models:\n",
         "    print(m.name, m.version)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Create a scoring file\n",
-        "\n",
-        "Since your model file can essentially be anything you want it to be, you need to supply a scoring script that can load your model and then apply the model to new data.  This script is your 'scoring file'.  This scoring file is a python program containing, at a minimum, two methods `init()` and `run()`.  The `init()` method is called once when your deployment is started so you can load your model and any other required objects.  This method uses the `get_model_path` function to locate the registered model inside the docker container.  The `run()` method is called interactively when the web service is called with one or more data samples to predict.\n",
-        "\n",
-        "The scoring file used for this exercise is [here](score.py).  \n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Describe your environment\n",
-        "\n",
-        "Each modelling process may require a unique set of packages.  Therefore we need to create an environment object describing the dependencies. \n",
-        "\n",
-        "Next we create an inference configuration using this environment object and the scoring script that we created previously."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from azureml.core.conda_dependencies import CondaDependencies\n",
-        "from azureml.core.environment import Environment\n",
-        "from azureml.core.model import InferenceConfig\n",
-        "\n",
-        "env = Environment('deploytocloudenv')\n",
-        "env.python.conda_dependencies = CondaDependencies.create(conda_packages=['scikit-learn'],pip_packages=['azureml-defaults'])\n",
-        "inference_config = InferenceConfig(entry_script=\"score.py\", environment=env)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Describe your target compute\n",
-        "In addition to the inference configuration, we also need to describe the type of compute we want to allocate for our webservice.  In in this example we are using an [Azure Container Instance](https://azure.microsoft.com/en-us/services/container-instances/) which is a good choice for quick and cost-effective dev/test deployment scenarios.  ACI instances require the number of cores you want to run and memory you need.  Tags and descriptions are available for you to identify the instances in AML when viewing the Compute tab in the AML Portal.\n",
-        "\n",
-        "For production workloads, it is better to use [Azure Kubernentes Service (AKS)](https://azure.microsoft.com/en-us/services/kubernetes-service/) instead. Try [this notebook](https://github.com/Azure/MachineLearningNotebooks/blob/master/how-to-use-azureml/deployment/production-deploy-to-aks/production-deploy-to-aks.ipynb) to see how that can be done from Azure ML.\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "tags": [
-          "deploy service",
-          "aci"
-        ]
-      },
-      "outputs": [],
-      "source": [
-        "from azureml.core.webservice import AciWebservice\n",
-        "\n",
-        "aciconfig = AciWebservice.deploy_configuration(cpu_cores=1, \n",
-        "                                               memory_gb=1, \n",
-        "                                               tags={'sample name': 'AML 101'}, \n",
-        "                                               description='This is a great example.')"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Deploy your webservice\n",
-        "The final step to deploying your webservice is to call `Model.deploy()`.  This function uses the deployment and inference configurations created above to perform the following:\n",
-        "* Build a docker image\n",
-        "* Deploy to the docker image to an Azure Container Instance\n",
-        "* Copy your model files to the Azure Container Instance\n",
-        "* Call the `init()` function in your scoring file\n",
-        "* Provide an HTTP endpoint for scoring calls\n",
-        "\n",
-        "The `Model.deploy` method requires the following parameters\n",
-        "* `workspace` - the workspace containing the service\n",
-        "* `name` - a unique named used to identify the service in the workspace\n",
-        "* `models` - an array of models to be deployed into the container\n",
-        "* `inference_config` - a configuration object describing the image environment\n",
-        "* `deployment_config` - a configuration object describing the compute type\n",
-        " \n",
-        "**Note:** The web service creation can take several minutes.  "
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "tags": [
-          "deploy service",
-          "aci"
-        ]
-      },
-      "outputs": [],
-      "source": [
-        "%%time\n",
-        "from azureml.core.model import Model\n",
-        "from azureml.core.webservice import Webservice\n",
-        "\n",
-        "# Create the webservice using all of the precreated configurations and our best model\n",
-        "service = Model.deploy(workspace=ws,\n",
-        "                       name='my-aci-svc',\n",
-        "                       models=[model],\n",
-        "                       inference_config=inference_config,\n",
-        "                       deployment_config=aciconfig)\n",
-        "\n",
-        "# Wait for the service deployment to complete while displaying log output\n",
-        "service.wait_for_deployment(show_output=True)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "\n",
-        "### Test your webservice"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "Now that your web service is runing you can send JSON data directly to the service using the `run` method.  This cell pulls the first test sample from the original dataset into JSON and then sends it to the service."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "tags": [
-          "deploy service",
-          "aci"
-        ]
-      },
-      "outputs": [],
-      "source": [
-        "import json\n",
-        "\n",
-        "service = ws.webservices['my-aci-svc']\n",
-        "\n",
-        "# scrape the first row from the test set.\n",
-        "test_samples = json.dumps({\"data\": X_test[0:1, :].tolist()})\n",
-        "\n",
-        "#score on our service\n",
-        "service.run(input_data = test_samples)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "This cell shows how you can send multiple rows to the webservice at once.  It then calculates the residuals - that is, the errors - by subtracting out the actual values from the results.  These residuals are used later to show a plotted result."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "tags": [
-          "deploy service",
-          "aci"
-        ]
-      },
-      "outputs": [],
-      "source": [
-        "# score the entire test set.\n",
-        "test_samples = json.dumps({'data': X_test.tolist()})\n",
-        "\n",
-        "result = service.run(input_data = test_samples)\n",
-        "residual = result - y_test"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "This cell shows how you can use the `service.scoring_uri` property to access the HTTP endpoint of the service and call it using standard POST operations."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "tags": [
-          "deploy service",
-          "aci"
-        ]
-      },
-      "outputs": [],
-      "source": [
-        "import requests\n",
-        "\n",
-        "# use the first row from the test set again\n",
-        "test_samples = json.dumps({\"data\": X_test[0:1, :].tolist()})\n",
-        "\n",
-        "# create the required header\n",
-        "headers = {'Content-Type':'application/json'}\n",
-        "\n",
-        "# post the request to the service and display the result\n",
-        "resp = requests.post(service.scoring_uri, test_samples, headers = headers)\n",
-        "print(resp.text)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Residual graph\n",
-        "One way to understand the behavior of your model is to see how the data performs against data with known results.  This cell uses matplotlib to create a histogram of the residual values, or errors, created from scoring the test samples.\n",
-        "\n",
-        "A good model should have residual values that cluster around 0 - that is, no error.  Observing the resulting histogram can also show you if the model is skewed in any particular direction."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "%matplotlib inline\n",
-        "import matplotlib.pyplot as plt\n",
-        "\n",
-        "f, (a0, a1) = plt.subplots(1, 2, gridspec_kw={'width_ratios':[3, 1], 'wspace':0, 'hspace': 0})\n",
-        "f.suptitle('Residual Values', fontsize = 18)\n",
-        "\n",
-        "f.set_figheight(6)\n",
-        "f.set_figwidth(14)\n",
-        "\n",
-        "a0.plot(residual, 'bo', alpha=0.4)\n",
-        "a0.plot([0,90], [0,0], 'r', lw=2)\n",
-        "a0.set_ylabel('residue values', fontsize=14)\n",
-        "a0.set_xlabel('test data set', fontsize=14)\n",
-        "\n",
-        "a1.hist(residual, orientation='horizontal', color='blue', bins=10, histtype='step')\n",
-        "a1.hist(residual, orientation='horizontal', color='blue', alpha=0.2, bins=10)\n",
-        "a1.set_yticklabels([])\n",
-        "\n",
-        "plt.show()"
       ]
     },
     {
