--- a/how-to-use-azureml/training/train-within-notebook-for-PowerBI/train-within-notebook.ipynb
+++ b/how-to-use-azureml/training/train-within-notebook-for-PowerBI/train-within-notebook.ipynb
@@ -38,10 +38,7 @@
         "1. [Deploy](#Deploy)\n",
         "    1. Register the model\n",
         "    1. Create a scoring file\n",
-        "    1. Describe your environment\n",
-        "    1. Descrice your target compute\n",
-        "    1. Deploy your webservice\n",
-        "    1. Test your webservice\n",
+        "    1. Create the Docker Image\n",
         "    1. Clean up\n",
         "1. [Next Steps](#nextsteps)\n",
         "\n",
@@ -369,6 +366,73 @@
         "models = Model.list(ws, name='best_model')\n",
         "for m in models:\n",
         "    print(m.name, m.version)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Create a scoring file"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Since your model file can essentially be anything you want it to be, you need to supply a scoring script that can load your model and then apply the model to new data. This script is your 'scoring file'. This scoring file is a python program containing, at a minimum, two methods init() and run(). The init() method is called once when your deployment is started so you can load your model and any other required objects. This method uses the get_model_path function to locate the registered model inside the docker container. The run() method is called interactively when the web service is called with one or more data samples to predict.\n",
+        "Important: The schema decorators for pandas and numpy are required to implement the automatic swagger schema generation for input and output variables\n" 
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%%writefile score.py\n",
+        "import json\n",
+        "import pickle\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "from sklearn.externals import joblib\n",
+        "from azureml.core.model import Model\n",
+        "\n",
+        "from inference_schema.schema_decorators import input_schema, output_schema\n",
+        "from inference_schema.parameter_types.numpy_parameter_type import NumpyParameterType\n",
+        "from inference_schema.parameter_types.pandas_parameter_type import PandasParameterType\n",
+        "\n",
+        "def init():\n",
+        "    global model\n",
+        "    model_path = Model.get_model_path('diabetesmodel.pkl')\n",
+        "    # deserialize the model file back into a sklearn model\n",
+        "    model = joblib.load(model_path)\n",
+        "\n",
+        "input_sample = pd.DataFrame(data=[{\n",
+        "        \"input_name_1\": 1\n",
+        "        \"input_name_2\": 2\n",
+        "        \"input_name_3\": 3\n",
+        "        \"input_name_4\": 4\n",
+        "        \"input_name_5\": 5\n",
+        "        \"input_name_6\": 6\n",
+        "        \"input_name_7\": 7\n",
+        "        \"input_name_8\": 8\n",
+        "        \"input_name_9\": 9\n",
+        "        \"input_name_10\": 10\n",
+        "        }])\n",
+        "\n",
+        "output_sample = np.array([1.23])\n",
+        "\n",
+        "@input_schema('data', PandasParameterType(input_sample))\n",
+        "@output_schema(NumpyParameterType(output_sample))\n",
+        "\n",
+        "def run(data):\n",
+        "   try:\n",
+        "        result = model.predict(data)\n",
+        "        # you can return any datatype as long as it is JSON-serializable\n",
+        "        return result.tolist()\n",
+        "    except Exception as e:\n",
+        "        error = str(e)\n",
+        "        return error"
       ]
     },
     {
