Renamed input and output parameters

--- a/how-to-use-azureml/training/train-within-notebook-for-PowerBI/train-within-notebook.ipynb
+++ b/how-to-use-azureml/training/train-within-notebook-for-PowerBI/train-within-notebook.ipynb
@@ -408,19 +408,19 @@
         "    model = joblib.load(model_path)\n",
         "\n",
         "input_sample = pd.DataFrame(data=[{\n",
-        "        \"input_name_1\": 1\n",
-        "        \"input_name_2\": 2\n",
-        "        \"input_name_3\": 3\n",
-        "        \"input_name_4\": 4\n",
-        "        \"input_name_5\": 5\n",
-        "        \"input_name_6\": 6\n",
-        "        \"input_name_7\": 7\n",
-        "        \"input_name_8\": 8\n",
-        "        \"input_name_9\": 9\n",
-        "        \"input_name_10\": 10\n",
+        "        \"input1_age\": 59\n",
+        "        \"input2_sex\": 2\n",
+        "        \"input3_bmi\": 32\n",
+        "        \"input4_bp\": 101\n",
+        "        \"input5_s1\": 157\n",
+        "        \"input6_s2\": 93\n",
+        "        \"input7_s3\": 38\n",
+        "        \"input8_s4\": 4\n",
+        "        \"input9_s5\": 5\n",
+        "        \"input10_s10\": 87\n",
         "        }])\n",
         "\n",
-        "output_sample = np.array([1.23])\n",
+        "output_sample = np.array([151.23])\n",
         "\n",
         "@input_schema('data', PandasParameterType(input_sample))\n",
         "@output_schema(NumpyParameterType(output_sample))\n",
