--- a/how-to-use-azureml/training/train-within-notebook-for-PowerBI/train-within-notebook.ipynb
+++ b/how-to-use-azureml/training/train-within-notebook-for-PowerBI/train-within-notebook.ipynb
@@ -38,6 +38,7 @@
         "1. [Deploy](#Deploy)\n",
         "    1. Register the model\n",
         "    1. Create a scoring file\n",
+        "    1. Describe your environment\n",
         "    1. Create the Docker Image\n",
         "    1. Clean up\n",
         "1. [Next Steps](#nextsteps)\n",
@@ -380,7 +381,10 @@
       "metadata": {},
       "source": [
         "Since your model file can essentially be anything you want it to be, you need to supply a scoring script that can load your model and then apply the model to new data. This script is your 'scoring file'. This scoring file is a python program containing, at a minimum, two methods init() and run(). The init() method is called once when your deployment is started so you can load your model and any other required objects. This method uses the get_model_path function to locate the registered model inside the docker container. The run() method is called interactively when the web service is called with one or more data samples to predict.\n",
-        "Important: The schema decorators for pandas and numpy are required to implement the automatic swagger schema generation for input and output variables\n" 
+        "\n",
+        "Important: The schema decorators for pandas and numpy are required to implement the automatic swagger schema generation for input and output variables\n",
+        "\n",
+        "After a successful run of the this script, the score.py file be created in the working folder\n"
       ]
     },
     {
@@ -433,6 +437,59 @@
         "    except Exception as e:\n",
         "        error = str(e)\n",
         "        return error"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Describe your environment\n",
+        "\n",
+        "This step will create the yml file (myenv.yml) for this deployment\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from azureml.core.conda_dependencies import CondaDependencies\n",
+        "\n",
+        "myenv = CondaDependencies.create(conda_packages=['numpy','scikit-learn'])\n",
+        "\n",
+        "with open (\"myenv.yml\",\"w\") as f:\n",
+        "   f.write(myenv.serialize_to_string())\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "\n",
+        "Edit the myenv.yml file to ensure it contains the exact following configurations\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "name: project_environment\n",
+        "dependencies:\n",
+        "- python=3.6.2\n",
+        "\n",
+        "- pip:\n",
+        "  - azureml-defaults==1.0.45.*\n",
+        "  - inference-schema[numpy-support]\n",
+        "  - azureml-defaults==1.0.45.*\n",
+        "- numpy\n",
+        "- scikit-learn\n",
+        "channels:\n",
+        "- conda-forge\n"
       ]
     },
     {
