Creating the image file

--- a/how-to-use-azureml/training/train-within-notebook-for-PowerBI/train-within-notebook.ipynb
+++ b/how-to-use-azureml/training/train-within-notebook-for-PowerBI/train-within-notebook.ipynb
@@ -38,7 +38,7 @@
         "1. [Deploy](#Deploy)\n",
         "    1. Register the model\n",
         "    1. Create a scoring file\n",
-        "    1. Describe your environment\n",
+        "    1. Create the environment yml file\n",
         "    1. Create the Docker Image\n",
         "    1. Clean up\n",
         "1. [Next Steps](#nextsteps)\n",
@@ -443,9 +443,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Describe your environment\n",
+        "### Create the environment yml file\n",
         "\n",
-        "This step will create the yml file (myenv.yml) for this deployment\n",
+        "This step will create the yml file (myenv.yml) in the working folder for this deployment\n",
         "\n"
       ]
     },
@@ -467,8 +467,40 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "### Create the Docker image\n",
         "\n",
-        "Edit the myenv.yml file to ensure it contains the exact following configurations\n",
+        "Create the docker image file from the scope.py and myenv.yml files\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from azureml.core.image import Image, ContainerImage\n",
+        "\n",
+        "image_config = ContainerImage.image_configuration(runtime= \"python\",\n",
+        "                                 execution_script=\"score.py\",\n",
+        "                                 conda_file=\"myenv.yml\",\n",
+        "                                 tags = {'area': \"diabetes\", 'type': \"regression\"},\n",
+        "                                 description = \"Image with the diabetes regression model\")\n",
+        "\n",
+        "image = Image.create(name = \"image_diabetesmodel\",\n",
+        "                     # this is the model object. note you can pass in 0-n models via this list-type parameter\n",
+        "                     # in case you need to reference multiple models, or none at all, in your scoring script.\n",
+        "                     models = [model],\n",
+        "                     image_config = image_config, \n",
+        "                     workspace = ws)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "\n",
+        "Edit the myenv.yml file in the working folder to ensure it contains the exact following configurations\n",
         "\n"
       ]
     },
