Deploy the ACI Service

--- a/how-to-use-azureml/training/train-within-notebook-for-PowerBI/train-within-notebook.ipynb
+++ b/how-to-use-azureml/training/train-within-notebook-for-PowerBI/train-within-notebook.ipynb
@@ -40,6 +40,7 @@
         "    1. Create a scoring file\n",
         "    1. Create the environment yml file\n",
         "    1. Create the Docker Image\n",
+        "    1. Deploy the Docker image as web service on Azure Container Instance\n",
         "    1. Clean up\n",
         "1. [Next Steps](#nextsteps)\n",
         "\n",
@@ -493,6 +494,94 @@
         "                     models = [model],\n",
         "                     image_config = image_config, \n",
         "                     workspace = ws)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "tags": [
+          "create image"
+        ]
+      },
+      "outputs": [],
+      "source": [
+        "image.wait_for_creation(show_output = True)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "List images by tag and find out the detailed build log for debugging."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "tags": [
+          "create image"
+        ]
+      },
+      "outputs": [],
+      "source": [
+        "for i in Image.list(workspace = ws,tags = [\"area\"]):\n",
+        "    print('{}(v.{} [{}]) stored at {} with build log {}'.format(i.name, i.version, i.creation_state, i.image_location, i.image_build_log_uri))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Deploy the Docker image as web service on Azure Container Instance\n",
+        "\n",
+        "Note that the service creation can take few minutes."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "tags": [
+          "deploy service",
+          "aci",
+          "sample-aciwebservice-deploy-config"
+        ]
+      },
+      "outputs": [],
+      "source": [
+        "from azureml.core.webservice import AciWebservice\n",
+        "\n",
+        "aciconfig = AciWebservice.deploy_configuration(cpu_cores = 1, \n",
+        "                                               memory_gb = 1, \n",
+        "                                               tags = {'area': \"diabetes\", 'type': \"regression\"}, \n",
+        "                                               description = 'ACI to host the web service with the diabetes regression model', \n)",
+        "                                               location = 'Canada Central')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "tags": [
+          "deploy service",
+          "aci",
+          "sample-aciwebservice-deploy-from-image"
+        ]
+      },
+      "outputs": [],
+      "source": [
+        "from azureml.core.webservice import Webservice\n",
+        "\n",
+        "aci_service_name = 'aci-service-diabetesmodel'\n",
+        "print(aci_service_name)\n",
+        "aci_service = Webservice.deploy_from_image(deployment_config = aciconfig,\n",
+        "                                           image = image,\n",
+        "                                           name = aci_service_name,\n",
+        "                                           workspace = ws)\n",
+        "aci_service.wait_for_deployment(True)\n",
+        "print(aci_service.state)"
       ]
     },
     {
