Test the ACI web service

--- a/how-to-use-azureml/training/train-within-notebook-for-PowerBI/train-within-notebook.ipynb
+++ b/how-to-use-azureml/training/train-within-notebook-for-PowerBI/train-within-notebook.ipynb
@@ -41,6 +41,7 @@
         "    1. Create the environment yml file\n",
         "    1. Create the Docker Image\n",
         "    1. Deploy the Docker image as web service on Azure Container Instance\n",
+        "    1. Test the Web Service\n",
         "    1. Clean up\n",
         "1. [Next Steps](#nextsteps)\n",
         "\n",
@@ -581,7 +582,21 @@
         "                                           name = aci_service_name,\n",
         "                                           workspace = ws)\n",
         "aci_service.wait_for_deployment(True)\n",
-        "print(aci_service.state)"
+        "print(aci_service.state)",
+        "print(aci_service.get_logs)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "tags": [
+          "Test the auto-generated Swagger interface/n"
+        ]
+      },
+      "outputs": [],
+      "source": [
+        "aci_service.swagger_uri"
       ]
     },
     {
@@ -617,6 +632,46 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "### Test web service"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Call the web service with some dummy input data to get a prediction."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+       "metadata": {},
+      "outputs": [],
+      "source": [
+        "import json\n",
+        "\n",
+        "\"test_sample = json.dumps({\"data\": [{\n",
+        "        \"input1_age\": 59\n",
+        "        \"input2_sex\": 2\n",
+        "        \"input3_bmi\": 32\n",
+        "        \"input4_bp\": 101\n",
+        "        \"input5_s1\": 157\n",
+        "        \"input6_s2\": 93\n",
+        "        \"input7_s3\": 38\n",
+        "        \"input8_s4\": 4\n",
+        "        \"input9_s5\": 5\n",
+        "        \"input10_s10\": 87,}]})\n",
+        "\n",
+        "test_sample = bytes(test_sample,encoding = 'utf8')\n",
+        "\n",
+        "prediction = aci_service.run(input_data=test_sample)\n",
+        "print(prediction)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "### Clean up"
       ]
     },
@@ -639,7 +694,7 @@
       "outputs": [],
       "source": [
         "%%time\n",
-        "service.delete()"
+        "aci_service.delete()"
       ]
     },
     {
