Latest version - AML SDK 1.6.0

--- a/how-to-use-azureml/training/train-within-notebook-for-PowerBI/train-within-notebook-for-PowerBI.ipynb
+++ b/how-to-use-azureml/training/train-within-notebook-for-PowerBI/train-within-notebook-for-PowerBI.ipynb
@@ -38,9 +38,10 @@
     "1. [Deploy](#Deploy)\n",
     "    1. Register the model\n",
     "    1. Create a scoring file\n",
-    "    1. Create the environment yml file\n",
-    "    1. Create the Docker Image\n",
-    "    1. Deploy the Docker image as web service on Azure Container Instance\n",
+    "    1. Create the environment confiugriaont (yml file for Conda and pip packages)\n",
+    "    1. Create the inference configuration (packaging a docker image behind the scences)\n",
+    "    1. Create the deployment configuration (targeting Azure Container Instance)\n",
+    "    1. Deploy the as web service on Azure Container Instance\n",
     "    1. Test the Web Service\n",
     "    1. Clean up\n",
     "1. [Next Steps](#nextsteps)\n",
@@ -450,9 +451,7 @@
     "The environment settings will also be exported into a yml file (myenv.yml) to verify the conda and pip packages.\n",
     "The yml file will be in the working folder for this deployment (but it is not needed - for verification only)\n",
     "\n",
-    "This step will \n",
-    "(1) Create the python environment with the required conda and pip packages/dependencies\n",
-    "(2) Create the Inference Configration based on the scoring file and python environment"
+    "This step will create the python environment with the required conda and pip packages/dependencies. And then, it will create the inference configuration that will build the Docker container based on the scoring file and the environment configuration. The Docker image is transparent and will be created and registered behind the scenes with the AzureML SDK."
    ]
   },
   {
@@ -714,6 +713,9 @@
   ],
   "friendly_name": "Train and deploy a model using Python SDK",
   "index_order": 1,
+  "kernel_info": {
+   "name": "python3-azureml"
+  },
   "kernelspec": {
    "display_name": "Python 3.6 - AzureML",
    "language": "python",
@@ -730,6 +732,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.9"
+  },
+  "nteract": {
+   "version": "nteract-front-end@1.0.0"
   },
   "tags": [
    "None"
