importing directly from joblib
scikitlearn external joblib has been deprecated

--- a/how-to-use-azureml/training/train-within-notebook-for-PowerBI/train-within-notebook-for-PowerBI.ipynb
+++ b/how-to-use-azureml/training/train-within-notebook-for-PowerBI/train-within-notebook-for-PowerBI.ipynb
@@ -121,7 +121,7 @@
     "from sklearn.linear_model import Ridge\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.externals import joblib\n",
+    "import joblib\n",
     "\n",
     "X, y = load_diabetes(return_X_y = True)\n",
     "columns = ['age', 'gender', 'bmi', 'bp', 's1', 's2', 's3', 's4', 's5', 's6']\n",
@@ -403,7 +403,7 @@
     "import pickle\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn.externals import joblib\n",
+    "import joblib\n",
     "from azureml.core.model import Model\n",
     "\n",
     "from inference_schema.schema_decorators import input_schema, output_schema\n",
