fixed model name in comments
fixed model name in comments

--- a/how-to-use-azureml/training/train-within-notebook-for-PowerBI/train-within-notebook-for-PowerBI.ipynb
+++ b/how-to-use-azureml/training/train-within-notebook-for-PowerBI/train-within-notebook-for-PowerBI.ipynb
@@ -367,7 +367,7 @@
    },
    "outputs": [],
    "source": [
-    "# Find all models called \"best_model\" and display their version numbers\n",
+    "# Find all models called \"diabetesmodel\" and display their version numbers\n",
     "from azureml.core.model import Model\n",
     "models = Model.list(ws, name='diabetesmodel.pkl')\n",
     "for m in models:\n",
